<resources>
    <string name="app_name">Real Estate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="Price">1250</string>
    <string name="Type">Type</string>
    <string name="City">City</string>
    <string name="RoomNumbers">3</string>
    <string name="BathNumber">2</string>
    <string name="Room">Room/s</string>
    <string name="Bath">Bath/s</string>
    <string name="ahmed">AHmed</string>
</resources>
