<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageID"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6.5"
        android:orientation="vertical">
        <TextView
            android:id="@+id/priceID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Price"/>

        <TextView
            android:id="@+id/typeID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Type"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/roomNumbersID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/RoomNumbers"
                    android:layout_weight="5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/Room"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/bathsNumbersID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/BathNumber"
                    android:layout_weight="5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/Bath"
                    android:layout_weight="5"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/cityID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/City"/>

    </LinearLayout>

</LinearLayout>